--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,15 +16,16 @@
         tools:context="com.mufcryan.android_demo.MainActivity"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvRecycler"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:indeterminate="true"
+            android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="@{viewModel.text}"
-            />
+            tools:listitem="@layout/item_repository" />
         <Button
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -33,7 +34,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="200dp"
-            android:onClick="@{() -> viewModel.refreshData()}"
+            android:onClick="@{() -> viewModel.loadRespositories()}"
             android:text="请求数据"
             />
         <ProgressBar
