--- a/composite_webview/src/main/res/layout/activity_main.xml
+++ b/composite_webview/src/main/res/layout/activity_main.xml
@@ -7,37 +7,34 @@
     android:layout_height="match_parent"
     tools:context="com.mufcryan.composite_webview.MainActivity">
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-        
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="cforcustomer.lovesheep.com.webviewdemo.MainActivity">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:descendantFocusability="blocksDescendants"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             >
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:text="头部"
-                android:gravity="center_horizontal"
-                />
-            <org.sufficientlysecure.htmltextview.HtmlTextView
-                android:id="@+id/htvContent"
+                android:layout_height="200px"
+                android:text="top"
+                android:textAlignment="center"/>
+            <WebView
+                android:id="@+id/webView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="@android:style/TextAppearance.Small"
-                />
+                android:layout_height="wrap_content"/>
             <TextView
+                android:id="@+id/tv_bottom"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:text="尾部"
-                android:gravity="center_horizontal"
-                />
+                android:layout_height="200px"
+                android:text="bottom"
+                android:textAlignment="center"/>
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+
+    </ScrollView>
 
 </LinearLayout>
